# lenscribe

./: README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
lenscribe/: core.py
tests/: test_core.py
